--- a/templates/AdminArea/EnrollStudentInquiry.html
+++ b/templates/AdminArea/EnrollStudentInquiry.html
@@ -273,19 +273,19 @@
                                     <tbody>
                                         <tr>
                                             <th>
-                                                <input type="text" required class="form-control" placeholder="" name="L">
+                                                <input type="text"  class="form-control" placeholder="" name="L">
                                             </th>
                                             <th>
-                                                <input type="text" required class="form-control" placeholder="" name="R">
+                                                <input type="text"  class="form-control" placeholder="" name="R">
                                             </th>
                                            <th>
-                                                 <input type="text" required class="form-control" placeholder="" name="W">
+                                                 <input type="text"  class="form-control" placeholder="" name="W">
                                             </th>
                                             <th>
-                                                 <input type="text" required class="form-control w-75" placeholder="" name="S">
+                                                 <input type="text"  class="form-control w-75" placeholder="" name="S">
                                             </th>
                                             <th>
-                                                 <input type="text" required class="form-control w-75" placeholder="" name="ALL">
+                                                 <input type="text"  class="form-control w-75" placeholder="" name="ALL">
                                             </th>
                                         </tr>
                           
@@ -296,7 +296,7 @@
                             <hr>
                              <div class="col-md-6 form-group">
                                 <label class="form-label" for="exampleFormControlSelect1">Country Preference</label>
-                                <select class="form-control" required id="exampleFormControlSelect1" name="country">
+                                <select class="form-control"  id="exampleFormControlSelect1" name="country">
                                     <option value="">Choose</option>
                                     <option value="CANADA">CANADA</option>
                                     <option value="USA">USA</option>
@@ -314,7 +314,7 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label class="form-label">Intended Major Field of Study :</label>
-                                    <input type="text" required class="form-control" placeholder="Intended Major Field of Study" name="FieldOfStudy">
+                                    <input type="text"  class="form-control" placeholder="Intended Major Field of Study" name="FieldOfStudy">
                                 </div>
                             </div>
                             <div class="col-md-6">
