--- a/templates/AdminArea/AdminDashboard.html
+++ b/templates/AdminArea/AdminDashboard.html
@@ -1,7 +1,6 @@
 {% extends "AdminArea/admin_header.html" %}
-{% load static %}   
 {% block content %}
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -51,11 +50,291 @@
 
 <body class="">
 
-	
+    
         <!-- [ Main Content ] start -->
 
 <div class="pc-container">
-    <div class="pcoded-content">ABC</div>
+    <div class="pcoded-content">
+        <!-- [ breadcrumb ] start -->
+         <div class="page-header">
+            <div class="page-block">
+                <div class="row align-items-center">
+                    <div class="col-md-12">
+                        <div class="page-header-title">
+                            <h5 class="m-b-10">AdminArea</h5>
+                        </div>
+                        <ul class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="{% url 'AdminArea:AdminDashboard' %}">Home</a></li>
+                            <li class="breadcrumb-item">Dashboard</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- [ breadcrumb ] end -->
+        <!-- [ Main Content ] start -->
+        <div class="row">
+            <!-- customar project  start -->
+            <div class="col-xl-3 col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row align-items-center m-l-0">
+                            <div class="col-auto">
+                                <i class="fas fa-user-graduate f-36 text-info"></i>
+                            </div>
+                            <div class="col-auto">
+                               
+                                <h6 class="text-muted m-b-10">Student</h6>
+                                <h2 class="m-b-0">{{total_student}}</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row align-items-center m-l-0">
+                            <div class="col-auto">
+                                <i class="fas fa-users f-36 text-danger"></i>
+                            </div>
+                            <div class="col-auto">
+                                <h6 class="text-muted m-b-10">Total </h6>
+                                <h2 class="m-b-0">{{total_batch}}</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row align-items-center m-l-0">
+                            <div class="col-auto">
+                                <i class="fas fa-user-tie f-36 text-success"></i>
+                            </div>
+                            <div class="col-auto">
+                                <h6 class="text-muted m-b-0"> <br>class</h6>
+                                <h2 class="m-b-0 custm-text">{{total_feeslen}}</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row align-items-center m-l-0">
+                            <div class="col-auto">
+                                <i class="fas fa-book-open f-36 text-primary"></i>
+                            </div>
+                            <div class="col-auto">
+                                <h6 class="text-muted m-b-10">Event</h6>
+                                <h2 class="m-b-0">{{AllEvents}}</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- customar project  end -->
+        </div>
+
+        <div class="row">
+            <div class="col-xl-6 col-md-12">
+                <div class="col-xl-12 col-md-12">
+                <div class="card task-card">
+                    <div class="card-header">
+                        <h5>Notice</h5>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-unstyled task-list">
+                             {% for i in AllNotice %}
+                            <li>
+                                <i class="feather icon-check f-w-600 task-icon bg-success"></i>
+                                <p class="m-b-5">{{i.notice_date}}</p>
+                                <h6 class="text-muted"><span class="text-primary">{{i.notice_sub}}</span>.<br>{{i.notice_desc}}</h6> 
+                            </li>
+                            {% endfor %}
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <div class="col-xl-6 col-md-12">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="card prod-p-card bg-primary background-pattern-white">
+                            <div class="card-body">
+                                <div class="row align-items-center m-b-0">
+                                    <div class="col"> 
+                                         <div id="clock" class="text-white">8:10:45</div>
+                                    </div>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    
+                </div>
+                 
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h5>Student List </h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="row align-items-center m-l-0">
+                            <div class="col-sm-6">
+                            </div>
+                            <div class="col-sm-6 text-end">
+                                <a href="{% url 'AdminArea:EnrollStudentInquiry' %}" class="btn btn-success btn-sm mb-3 btn-round"><i class="feather icon-plus"></i> Add Student</a>
+                            </div>
+                        </div>
+                        <div class="table-responsive">
+                            <table id="report-table" class="table table-bordered table-striped mb-0">
+                                <thead>
+                                    <tr>
+                                        <th>No</th>
+                                        <th>Date</th>
+                                        <th>Name</th>
+                                        <th>Mobile</th>
+                                        <th>Gender</th>
+                                        <th>BOD</th>
+                                        <th>Course</th>
+                                        <th>Email</th>
+                                        <th>Address</th>
+                                        <th>Educations</th>
+                                        <th>Reference</th>
+                                        
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for i in StudentInquiryList %}
+                                    <tr>
+                                        <td>{{i.inquiry_num}}</td>
+                                       
+                                        <td>{{i.inquiry_date}}</td>
+                                        <td>{{i.full_name}}</td>
+                                        <td>{{i.mobile}}</td>
+                                        <td>{{i.gender}}</td>
+                                        <td>{{i.dob}}</td>
+                                        <td>{{i.course}}</td>
+                                        <td>{{i.email}}</td>
+                                        <td>{{i.address}}</td>
+                                        <td>{{i.edu_que}}</td>
+                                        <td>{{i.reference}}</td>
+                                       
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h5> Summary</h5>
+                    </div>
+                    <div class="card-body">
+                        <div id="pie-chart-1" style="width:100%"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h5>Attendance Summary</h5>
+                    </div>
+                    <div class="card-body">
+                        <div id="pie-chart-2" style="width:100%"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- subscribe end -->
+            <!-- Tasks start -->
+            
+            <!-- <div class="col-xl-12 col-md-12">
+                <div class="card overflow-hidden">
+                    <div class="card-body bg-light">
+                       <h5>Latast News</h5>
+                    </div>
+                    <div class="card-footer">
+                        
+                           
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+           
+           
+            <!-- subscribe start -->
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h5>Student Leave List </h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table id="report-table" class="table table-bordered table-striped mb-0">
+                                <thead>
+                                    
+                                    <tr>
+                                        <th>Status</th>
+                                        <th>Photo</th>
+                                        <th>Name</th>
+                                        <th>SID</th>
+                                        <th>From Date</th>
+                                        <th>To Date</th>
+                                        <th>Type</th>
+                                        <th>Reason</th>
+                                        <th>Days</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for i in AllLeavelist %}
+                                    <tr>
+                                        <td>
+                                            {% if i.status == 'Approw' %}
+                                            <a href="#!" class="btn btn-success btn-sm dissabled">Approved</a>
+                                            {% elif i.status == 'Panding_Request' %}
+                                            <a href="#!" class="btn btn-info btn-sm dissabled">Panding</a>
+                                            {% else %}
+                                            <a href="#!" class="btn btn-danger btn-sm dissabled">Rejected</a>
+                                            {% endif %}
+                                        </td>
+                                        <td>
+                                            {% if i.student.photo %}
+                                            <img src="{{i.student.photo.url}}" class="img-radius" width="30px" height="30px">
+                                            {% endif %}
+                                        </td>
+                                        <td>{{i.full_Name}}</td>
+                                        <td>{{i.student_id}}</td>
+                                        <td>{{i.from_date}}</td>
+                                        <td>{{i.to_date}}</td>
+                                        <td>{{i.Leave_catagory}}</td>
+                                        <td>{{i.Leave_reason}}</td>
+                                        <td>{{i.Leave_day}}</td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- subscribe end -->
+        </div>
+        <!-- [ Main Content ] end -->
+    </div>
 </div>
 
     <!-- Required Js -->
